--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -40,19 +40,21 @@
         </li><li>
           2.自定义私有弹幕后，是否启用AI弹幕与之混用（默认不启用，注：未定义私有弹幕则启用AI）；
         </li><li>
-          3.是否开启匿名用户功能（默认是半匿名状态，如"大王***"）；          
+          3.是否开启自动取关功能（默认是不自动取关的，从版本0.9.0重新启用）；              
         </li><li>
-          4.是否关闭幻神弹幕特效（默认有幻神特效，此功能一般没必要关闭）；
-        </li><li>          
-          5.自定义设置自动跳转次数上限（默认每天100次，不同等级对应不同跳转次数上限）;
+          4.是否开启匿名用户功能（默认是半匿名状态，如"大王***"）；          
         </li><li>
-          6.自定义设置火力全开/粉丝福利社结束后等待时间（默认等待60s没重开火力全开则跳转）；
+          5.是否关闭幻神弹幕特效（默认有幻神特效，此功能一般没必要关闭）；
         </li><li>          
-          7.自定义不符合房间的跳转延迟等待时间（新跳转房间条件不达标，则默认是3s后跳转）;          
+          6.自定义设置自动跳转次数上限（默认每天100次，不同等级对应不同跳转次数上限）;
+        </li><li>
+          7.自定义设置火力全开/粉丝福利社结束后等待时间（默认等待60s没重开火力全开则跳转）；
+        </li><li>          
+          8.自定义不符合房间的跳转延迟等待时间（新跳转房间条件不达标，则默认是3s后跳转）;          
         </li>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
-        <span style="font-family:等线; font-size:12pt;font-weight: 600;">原🀄自动取关🀄功能现在已经改为默认设置了(非牌子和非特殊关注房间，脚本抢完丸子跑路会自动取关)，后期还会增加一些有趣实用的功能，请多关注QQ群(650178547)内动态！Here We Go，教程走起：</span>
+        <span style="font-family:等线; font-size:12pt;font-weight: 600;">原🀄自动取关🀄功能又重新启用了，原因是频繁操作会触发斗鱼的验证机制(非牌子和非特殊关注房间，不会自动取关)，后期还会增加一些有趣实用的功能，更多实时动态请多关注QQ群(650178547)内动态！Here We Go，教程走起：</span>
       </p>
 
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
@@ -122,9 +124,25 @@
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_16.png" width="100%"></td>
       </tr></table>
 
+      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">3、自动取关功能</span>
+      </h2>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">a)</span>
+        <span style="font-family:等线; font-size:12pt">由于火力房间频繁关注和取关的操作会触发斗鱼的验证机制(滑块验证)，所以斑竹大大根据大家不同的需要又重新恢复了自动取关的设置功能，默认是不自动取关的，大家可以单条弹幕存放（左下图）也可以合并存放（右下图）;</span>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄自动取关🀄</span>
+      </p>         
+      </p>      
+      <table style="margin-left: 20px;"><tr>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_8.png" width="100%"></td><td>&nbsp;&nbsp;</td>
+        <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_9.png" width="100%"></td>
+      </tr></table>
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">3、开启匿名用户功能</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">4、开启匿名用户功能</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">由于之前网站的一些数据被恶意毁坏，同时为了大家数据安全着想，脚本安全做了全面升级，默认情况下使用脚本收集用户共享的网络节点信息是半匿名的，如“大王***”共享了一个火力节点，如果开启“匿名用户”模式，则显示为“匿名***”共享了一个火力节点，把用户的安全和隐私力求做到最好，您可以单条弹幕存放（左下图）也可以合并存放（右下图）;</span>
@@ -140,7 +158,7 @@
       </tr></table>
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">4、关闭幻神特效</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">5、关闭幻神特效</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">若您每天开自动脚本薅羊毛次数较多或电脑性能较弱的话，建议您关闭幻神弹幕特效，这样会节省一点性能和资源，主要是页面加载也不容易出更多的错误。您可以单条弹幕存放（左下图）也可以合并存放（右下图）;</span>
@@ -156,7 +174,7 @@
       </tr></table>
 
       <h2 style="font-size:14pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">5、自定义火力跳转次数上限功能</span>
+        <span style="font-family:'等线 Light'; font-size:14pt; font-weight:bold">6、自定义火力跳转次数上限功能</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:'Segoe UI Symbol'; font-size:12pt">a)</span>
@@ -180,7 +198,7 @@
       </tr></table>      
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">6、自定义火力全开/粉丝福利社活动结束后等待时间</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">7、自定义火力全开/粉丝福利社活动结束后等待时间</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
@@ -206,7 +224,7 @@
       </p>
 
       <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">7、自定义不符合房间的跳转延迟等待时间</span>
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">8、自定义不符合房间的跳转延迟等待时间</span>
       </h2>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
         <span style="font-family:等线; font-size:12pt">a)</span>
@@ -259,7 +277,6 @@
         }else{
             alert("请登录昵称验证后才能开启隐藏教程！");
             window.location.href = "https://popzoo.github.io/barrage/";
-            // window.location.href = "https://popzoo.github.io/zoo/hiddenFlower.html";
         }  
     }  
     function delayLoad(){
