--- a/danmuManual.html
+++ b/danmuManual.html
@@ -19,7 +19,7 @@
 		<ul class='clearfix'>
 			<!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;text-decoration:none;">时光轴</a></li>
-			<li class='float_six'><a href="https://popzoo.github.io/pop/fireroom.html" style="color:gold;text-decoration:none;">火力房</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;text-decoration:none;">火力房</a></li>
 			<!-- <li class='float_six'><a href="javascript:alert('功能还待优化');" style="color:gold;text-decoration:none;">火力房</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;text-decoration:none;">云弹幕</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
