--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -49,7 +49,9 @@
         </li><li>
           7.自定义设置火力全开/粉丝福利社结束后等待时间（默认等待60s没重开火力全开则跳转）；
         </li><li>          
-          8.自定义不符合房间的跳转延迟等待时间（新跳转房间条件不达标，则默认是3s后跳转）;          
+          8.自定义不符合房间的跳转延迟等待时间（新跳转房间条件不达标，则默认是3s后跳转）;           
+        </li><li>          
+          9.自定义弹幕发送时间间隔（默认间隔是10s+1.5s，从版本0.9.1开始启用）;          
         </li>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; widows:0">
@@ -241,6 +243,23 @@
       </p>        
       <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_19.png" />
+        <span style="font-family:等线; font-size:10.5pt"></span>
+      </p>
+
+      <h2 style="font-size:16pt; line-height:173%; margin:13pt 0pt; orphans:0; page-break-after:avoid; page-break-inside:avoid; text-align:justify; widows:0">
+        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:bold">9、自定义弹幕发送时间间隔</span>
+      </h2>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 21pt; orphans:0; text-align:justify; text-indent:-21pt;">
+        <span style="font-family:等线; font-size:12pt">a)</span>
+        <span style="font-family:等线; font-size:12pt">自定义弹幕发送间隔时间基数，单位为s，脚本默认是10s+1.5s随机数，且需要满足自己的弹幕间隔数大于3~6条。下图的数值15表示弹幕发送间隔时间最低为15s，实际数值要大于这基数一点，满足各位老爷想提速或减速的需求撒~(一定要注意格式，箭头后是纯数字，箭头不可缺失，可以有空格，单独存放)；参数取值范围：1~随心所欲大；</span>
+      </p>
+      <p style="margin:5px 0 10px 20px; orphans:0; text-align:justify; widows:0">
+        <span style="background-color:#ffff00; color:#ff0000; font-family:等线; font-size:12pt">这里复制</span>
+        <span style="background-color:#ffff00; color:#ff0000; font-family:Wingdings; font-size:10.5pt"></span>
+        <span style="font-family:等线; font-size:12pt">🀄弹幕时隔🀄▶15</span>
+      </p>         
+      <p style="margin-left: 20px; orphans:0; text-align:justify; widows:0">
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/hiddenIns_21.png" />
         <span style="font-family:等线; font-size:10.5pt"></span>
       </p>
 
