--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">薅羊毛脚本旧版本今日晚20点停止服务，请大家没升级的做好升级准备，自己二次开发的大佬们也请移步到新版去整蛊撒，旧版服务将打包投掷垃圾桶。在捐助列表中微信打赏的三位老爷们（**꧂，**亮，**燚）也请把邮箱或QQ等联系方式告知斑竹大大，等到圣诞节我好一起给各位打赏老爷们送福利(必有惊喜)撒~！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">薅羊毛脚本旧版服务已经被打包投掷垃圾桶，新版服务如有异常还请大家及时到群内批评和反馈。由于最近使用公用弹幕的经常被房间封号，所以强烈建议大家把自己弹幕改为"666"，"一发入魂"等比较水的弹幕哈，防止大军在此出现集体滑铁卢事件哈，另外圣诞礼物提前派送哈，胖头鱼大佬抢红神器已放出，到obrua.com网站论坛既可获取，用过的人都说牛批哈！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
@@ -502,7 +502,31 @@ $(function(){//极速 	#FFBBFF
 	// 	'months' : 10,
 	// 	'times' :'V0.8.9',
 	// 	'even' :'……未来可期……'							
-	}]},			
+	}]},
+	{
+	'year' : "迭代",
+	'events' :[
+	{
+		'months' : 2,
+		'times' :'V0.9.0',
+		'even' :'增大弹幕发送时隔，恢复启用隐藏功能“自动取关”功能，默认关闭，修复节点特殊符号的占用'
+	},{
+		'months' : 4,
+		'times' :'V0.9.1',
+		'even' :'修复极速签到和停止开火有时图标切换失灵的bug,增加弹幕自定义发送时间的基数,单位s'	
+	},{
+		'months' : 6,
+		'times' :'V0.9.2',
+		'even' :'修复新注册小号导致脚本模块为undefined的bug，修复签到和停火图标切换又失灵bug'	
+	},{
+		'months' : 8,
+		'times' :'V0.9.3',
+		'even' :'……敬请期待……'	
+	},{
+		'months' : 10,
+		'times' :'V0.9.4',
+		'even' :'……未来可期……'							
+	}]},				
 	{
 	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
 	'events' :[
@@ -524,8 +548,8 @@ $(function(){//极速 	#FFBBFF
 		'even' :'⚡⚡⚡⚡⚡⚡戕害忠良受神诛⚡⚡⚡⚡⚡⚡'
 	},{			
 		'months' : 10,
-		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[QQ:乔二郎*]</sapn>',
-		'even' :'<span style="color:#EE3B3B;">白嫖偶的脚本，还多次侮辱作者大大，这种无赖大恶人，必须镇压九幽冥火之地狱，焚魂灼魄！</sapn>'
+		'times' :'<span style="color:red;">楼底镇压大恶人-武林恶名[主播:爷大干*]</sapn>',
+		'even' :'<span style="color:#EE3B3B;">薅羊毛大军滑铁卢之役(集体被禁半年)，以暴制暴将其封禁于九幽冥火之地狱，焚魂灼魄！</sapn>'
 	},{
 		'months' : 10,
 		'times' :'<span style="color:red;">楼底囚禁大魔头-江湖臭名[主播:William*]</span>',
