--- a/danmuManual.html
+++ b/danmuManual.html
@@ -38,18 +38,15 @@
       </p>        
       <ol type="1" style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:12pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          <span style="font-family:等线; font-size:12pt; font-weight:bold">1. 首先去下面链接下载云弹幕定制模板，文件内容见下面图片</span></li>
+          <span style="font-family:等线; font-size:12pt; font-weight:bold">1. 首先去下面链接下载云弹幕定制模板（Ctrl+S保存到本地为默认的json格式），文件内容见下面图片</span></li>
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">普通模板链接：</span>
-        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/json/template.json" target="_blank">
-          <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/json/template.json</span></a><br>
+        <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/jsonDanmu/commonTemplate.json" target="_blank">点击这里</a><br>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">极简模板链接：</span>
-        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/json/easyTemplate.json" target="_blank">
-          <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/json/easyTemplate.json</span></a><br>
+        <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/jsonDanmu/easyTemplate.json" target="_blank">点击这里</a><br>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">公用弹幕链接：</span>  
-        <a style="color:#0563c1" href="https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json" target="_blank">
-          <span style="color:#0563c1; font-family:等线; font-size:12pt; font-weight:bold; text-decoration:underline">https://cdn.statically.io/gh/popzoo/barrage/master/danmu.json</span></a>
+        <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/jsonDanmu/publicDanmu.json" target="_blank">点击这里</a>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_1.png"/></p>
@@ -189,11 +186,22 @@
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_7.png"/></p>        
       </p>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">上传完毕弹幕后，会出现在线访问链接地址，大家可以点击看看在线弹幕内容文字是否是正常，如果出现了乱码，则需要重新编码上传，否则程序无法解析乱码文件的；</span></p>      
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_8.png"/></p>        
+      </p>
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">如果您的弹幕出现乱码（一般是由于编码方式导致），修改编码格式即可，用win记事本为例，点击文件-另存为，然后选择编码为utf-8保存即可，如下图所示，然后重复上面操作。最后上传成功还要记得检验呦！</span></p>      
+      <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
+        <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/danmuManual_9.png"/></p>        
+      </p>      
         <br />
-        <span style="font-family:'等线 Light'; font-size:16pt; font-weight:800;">特别说明</span></p>
+
+      <span style="font-family:'等线 Light'; font-size:16pt; font-weight:800;">特别说明</span></p>
       <p style="margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
         <ol>
-        <li style="font-family:等线;line-height: 22px; font-size:12pt"><span style="font-family:Wingdings; font-size:12pt"></span>上面所有的配置是跟随用户账号关联的，目前初期阶段还提供了昵称下载云弹幕功能，方便大家异地编写云弹幕。由于是昵称名匹配设置，所以每个账户对应一个云弹幕库，新上传的云弹幕文件会自动覆盖旧版的云弹幕文件，此过程不可逆。如果大家有需求，后期可以提高安全措施，防止他人知道您的昵称后任意下载您的弹幕库内容。</li>
+        <li style="font-family:等线;line-height: 22px; font-size:12pt"><span style="font-family:Wingdings; font-size:12pt"></span>上面所有的配置是跟随用户账号关联的，目前由于网站受到了恶意攻击，为避免大家云弹幕安全起见，暂时不支持下载服务，防止他人知道你的云弹幕肆意盗用。由于是昵称名匹配设置，所以每个账户对应一个云弹幕库，新上传的云弹幕文件会自动覆盖旧版的云弹幕文件，此过程不可逆。</li>
         <li style="font-family:等线;line-height: 22px; font-size:12pt"><span style="font-family:Wingdings; font-size:12pt"></span>目前暂不支持删除弹幕功能，如果大家想去除自己的云弹幕内容，可以发一个内容为{}的空括号json文件来覆盖自己以前的云弹幕内容，保护自己弹幕隐私安全，也可以进QQ群650178547@斑竹帮你手动删数据库哈！</li>
         <li style="font-family:等线; font-size:12pt;"><span style="font-family:Wingdings; font-size:12pt"></span>如有不足和意见欢迎给作者发email：
           <a style="color:#0563c1" href="mailto:lvlanxing@gmail.com">
