--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<!-- <li class='float_six'><a href="javascript:alert('功能还待开发');" style="color:gold;">火力房</a></li> -->
 			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;">礼物秀</a></li>
 			<li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;">车队展</a></li>
-			<li class='float_six'><a href="https://lvlanxing.coding.me/monitor/" style="color:gold;">看板台</a></li>
-			<!-- <li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;">看板台</a></li> -->
+			<!-- <li class='float_six'><a href="https://popzoo.github.io/bi/" style="color:gold;">看板台</a></li> -->
+			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;">GreaseFork</a></li>
 		</ul>
 	</div>
 	<div class="w1000 tc body" >
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">薅羊毛脚本旧版服务已经被打包投掷垃圾桶，新版服务如有异常还请大家及时到群内批评和反馈。由于最近使用公用弹幕的经常被房间封号，所以强烈建议大家把自己弹幕改为"666"，"一发入魂"等比较水的弹幕哈，防止大军在此出现集体滑铁卢事件哈，另外圣诞礼物提前派送哈，胖头鱼大佬抢红神器已放出，到obrua.com网站论坛既可获取，用过的人都说牛批哈！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">薅羊毛脚本最近使用公用弹幕的经常被房间封号，所以强烈建议大家把自己弹幕改为"666"，"一发入魂"等比较水的弹幕哈，防止大军在此出现集体滑铁卢事件哈！另外薅羊毛多开教程已经新鲜出炉，想要体验四开、八开、十二开……的小伙伴们赶快<a href="https://popzoo.github.io/zoo/manyOpen.html" target="_blank"><strong style="color:	#48D1CC;">点击这里</strong></a>试试哈，电脑崩死了可别喷小编哈，俺也只是方法的搬运工！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
@@ -494,14 +494,6 @@ $(function(){//极速 	#FFBBFF
 		'months' : 10,
 		'times' :'V0.8.9',
 		'even' :'修复重启浏览器弹幕仍被本地缓存的bug，将极速签到功能整合到二合一开关和火力停止中'	
-	// },{
-	// 	'months' : 8,
-	// 	'times' :'V0.8.8',
-	// 	'even' :'……敬请期待……'	
-	// },{
-	// 	'months' : 10,
-	// 	'times' :'V0.8.9',
-	// 	'even' :'……未来可期……'							
 	}]},
 	{
 	'year' : "迭代",
@@ -521,11 +513,13 @@ $(function(){//极速 	#FFBBFF
 	},{
 		'months' : 8,
 		'times' :'V0.9.3',
-		'even' :'……敬请期待……'	
+		'even' :'增大弹幕发言时间为13s，增加活动页面检测机制，降低进入小黑屋风险'
+		// 'even' :'……敬请期待……'
 	},{
 		'months' : 10,
 		'times' :'V0.9.4',
-		'even' :'……未来可期……'							
+		'even' :'修复鱼丸区功能提示被竞猜遮挡问题，去除冗余和注释代码，优化jump节点存储'
+		// 'even' :'……未来可期……'
 	}]},				
 	{
 	'year' : '<div onclick="jumpToScanBoard()" style="color:#EE3B3B;">除恶</div>',
@@ -569,7 +563,7 @@ $(function(){//极速 	#FFBBFF
 		}
 	}
 	function jumpToScanBoard(){
-		window.open("https://lvlanxing.coding.me/monitor/","_blank");
+		window.open("https://popzoo.github.io/zoo/manyOpen.html","_blank");
 	}
 </script>
 </body>
