--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' style="font-size: 20px;line-height: 40px; background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">薅羊毛脚本最近使用公用弹幕的经常被房间封号，所以强烈建议大家把自己弹幕改为"666"，"一发入魂"等比较水的弹幕哈，防止大军在此出现集体滑铁卢事件哈！另外薅羊毛多开教程已经新鲜出炉，想要体验四开、八开、十二开……的小伙伴们赶快<a href="https://popzoo.github.io/zoo/manyOpen.html" target="_blank"><strong style="color:	#48D1CC;">点击这里</strong></a>试试哈，电脑崩死了可别喷小编哈，俺也只是方法的搬运工！</p>
+		<p class='header' style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">薅羊毛脚本最近使用公用弹幕的经常被房间封号，所以强烈建议大家把自己弹幕改为"666"，"一发入魂"等比较水的弹幕哈，防止大军在此出现集体滑铁卢事件哈！另外薅羊毛多开教程已经新鲜出炉，想要体验四开、八开、十二开……的小伙伴们赶快<a href="https://popzoo.github.io/zoo/manyOpen.html" target="_blank"><strong style="color:	#48D1CC;">点击这里</strong></a>试试哈，电脑崩死了可别喷小编哈，俺也只是方法的搬运工！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
