--- a/manyOpen.html
+++ b/manyOpen.html
@@ -43,7 +43,7 @@
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/AdBlockPlus.jpg"/>
       </p>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt;">
-        <span style="font-family:等线; font-size:12pt; font-weight:bold">AdBlock和AdBlock配置类似，详见下图配置；</span></p>        
+        <span style="font-family:等线; font-size:12pt; font-weight:bold">AdBlock和AdBlock配置类似，详见下图配置；请这里复制规则--><strong style="color: red;">www.douyu.com/lapi/live/getH5Play/*</strong></span></p>        
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt;">
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/AdBlock.jpg"/>
       </p>
