--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
 	<div class="w1000 header">
 		<ul class='clearfix'>
 			<!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
-			<li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;">时光轴</a></li>
-			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;">云弹幕</a></li>
-			<li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;">火力房</a></li>
-			<!-- <li class='float_six'><a href="javascript:alert('功能还待开发');" style="color:gold;">火力房</a></li> -->
-			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;">礼物秀</a></li>
-			<li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;">车队展</a></li>
-			<!-- <li class='float_six'><a href="https://popzoo.github.io/bi/" style="color:gold;">看板台</a></li> -->
-			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;">GreaseFork</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;text-decoration:none;">时光轴</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;text-decoration:none;">火力房</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;text-decoration:none;">云弹幕</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
+			<li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
+			<li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
 		</ul>
 	</div>
 	<div class="w1000 tc body" >
