--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     	    <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="300px">
     	</div>		
 		<p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-		<p class='header' id="home_main_notice" style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">此处诚招广告入住！</p>
+		<p class='header' id="home_main_notice" style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">此处诚招广告商，代理商入驻，薅羊毛板块首页C位，为您展示自己的产品或服务无条件聚光清场，站长大人为您的广告极速加载保驾护航，如果网站挂了，也会以迅雷不及掩耳之势，通过预备方案极速切换其他线路，让您的广告屹立不倒，咬定不松！</p>
 		<div class="event_wrap clearfix">
 			<div class="middle_line"></div>
 		</div>
@@ -51,5 +51,6 @@
 <script src='https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/jquery.eventFlow.js'></script>
 <script type="text/javascript" src="https://robot.ownthink.com/bot/js/robot.js"></script>
 <script src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/timeLine.js"></script>
+<!-- <script src="timeLine.js"></script> -->
 </body>
 </html>
