--- a/manyOpen.html
+++ b/manyOpen.html
@@ -32,10 +32,10 @@
       <h1 style="font-size:22pt; line-height:150%; margin:17pt 0pt 16.5pt;padding-top: 15px; page-break-after:avoid; page-break-inside:avoid; text-align:center; widows:0">
         <span style="font-family:等线; font-size:22pt; font-weight:bold">薅羊毛多开使用教程</span></h1>
       <p style="font-size:14pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; text-indent:21pt; widows:0">
-        <span style="font-family:等线; font-size:14pt; font-weight:bold;">为了回馈广大水友的日趋壮大的薅羊毛热情，小编把群里薅羊毛大能们的经验整理下，本着多开多薅、少开少薅、不开没得薅的原则，飨食给想要多开薅羊毛的用户老爷们，如果下列方法帮到你，还请受益的老爷们给打个赏（这月租网盘租费还没攒够呢哈），下面教程走起！</span></p>
+        <span style="font-family:等线; font-size:14pt; font-weight:bold;">为了回馈广大水友的日趋壮大的薅羊毛热情，小编把群里薅羊毛大能们的经验整理下，本着多开多薅、少开少薅、不开没得薅的原则，飨食给想要多开薅羊毛的用户老爷们，话不多说，教程走起！</span></p>
       <ol style="margin:0pt; padding-left:0pt">
         <li style="font-family:等线; font-size:14pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
-          <span style="font-family:等线; font-size:14pt; font-weight:bold">1. 首先准备网址屏蔽神器——AdBlock或其进阶版AdBlockPlus(推荐)，国内用户<a href="https://chromecj.com/" target="_blank">点击这里</a>搜索并下载插件，360、搜狗浏览器在自己的插件商城也能搜到，或自备梯子去Google商店下载一手插件。然后安装插件，如何安装我就不说了，怕侮辱大家的智商哈！</span></li>
+          <span style="font-family:等线; font-size:14pt; font-weight:bold">1. 首先准备网址屏蔽神器——AdBlock或其进阶版AdBlockPlus(推荐)，国内用户<a href="https://chromecj.com/" target="_blank">点击这里</a>搜索并下载插件，360、QQ浏览器在自家的插件商城也能搜到，或自备梯子去Google商店下载一手插件。然后安装插件，如何安装我就不说了，怕侮辱大家的智商哈！</span></li>
         <li style="font-family:等线; font-size:14pt; font-weight:bold; line-height:150%; margin:0pt 0pt 0pt 14pt; orphans:0; padding-left:4pt; text-align:justify; text-indent:0pt; widows:0">
           <span style="font-family:等线; font-size:14pt; font-weight:bold">2.然后就是关键部分了，就是彻底干掉斗鱼的视频播放(之前用H5的禁用AutoPlay插件，仅能屏蔽视频，让用户看不到，但后台还是走带宽流量的，并不能一步解决根本问题)，是如何过滤斗鱼视频源的方法，进一步降低浏览器内存消耗和网络带宽占用。AdBlockPlus详见下图配置；</span></li>          
       </ol>
@@ -64,7 +64,12 @@
         <img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/multiDesktop.jpg"/>
       </p>
       <p style="font-size:14pt; line-height:150%; margin:0pt 0pt 0pt 18pt;">
-        <span style="font-family:等线; font-size:14pt; font-weight:bold">抬眼望，羊被薅叫，抢丸激烈！除了斗鱼的小黑屋，天下之大，薅羊毛大军，大可以去得！顺便打个广告，薅点韭菜，希望各位老爷财主们，打赏下撒(1毛也是爱呀)，教程不易，撸码更难，如有不佳，还望海涵！</span></p>
+        <span style="font-family:等线; font-size:14pt; font-weight:bold">
+        友情提示，使用屏蔽斗鱼视频推流的办法，目前尚不明确是否会增加进入小黑屋的概率，大家使用一段要慎之又慎，切记！切记！切记！因为重要所以说三遍。
+        </span></p>      
+      <p style="font-size:14pt; line-height:150%; margin:0pt 0pt 0pt 18pt;">
+        <span style="font-family:等线; font-size:14pt; font-weight:bold">
+        抬眼望，羊被薅叫，抢丸激烈！除了斗鱼的小黑屋，天下之大，薅羊毛大军，大可以去得！顺便打个广告，薅点韭菜，希望各位老爷财主们，打赏下撒(1毛也是爱呀)，教程不易，撸码更难，如有不佳，还望海涵！</span></p>
 <!--       <table style=" margin:0 auto 0;"><tr> 
         <td><img src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/WeChatPay.png" width="60%"></td>
       </tr></table>   -->      
