--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -19,11 +19,15 @@
     <ul class='clearfix'>
       <!-- <li class='float_six'><a href="javascript:;">首页</a></li> -->
       <li class='float_six'><a href="https://popzoo.github.io/zoo/" style="color:gold;text-decoration:none;">时光轴</a></li>
-      <li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;text-decoration:none;">火力房</a></li>
+      <!-- <li class='float_six'><a href="https://popzoo.github.io/pop/firenode.html" style="color:gold;text-decoration:none;">火力房</a></li> -->
+      <li class='float_six'><a href="https://lvlanxing.coding.me/pop/" style="color:gold;text-decoration:none;">火力房</a></li>
       <li class='float_six'><a href="https://popzoo.github.io/barrage/" style="color:gold;text-decoration:none;">云弹幕</a></li>
-      <li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
-      <li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
+      <!-- <li class='float_six'><a href="https://popzoo.github.io/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li> -->
+      <li class='float_six'><a href="https://lvlanxing.coding.me/pop/giftshow.html" style="color:gold;text-decoration:none;">礼物秀</a></li>
+      <!-- <li class='float_six'><a href="https://popzoo.github.io/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li> -->
+      <li class='float_six'><a href="https://lvlanxing.coding.me/pop/motorcade.html" style="color:gold;text-decoration:none;">车队展</a></li>
       <li class='float_six'><a href="https://greasyfork.org/zh-CN/scripts/389379" style="color:gold;text-decoration:none;">GreaseFork</a></li>
+      <!-- <li class='float_six'><a href="https://bi.popzoo.xyz" style="color:gold;text-decoration:none;">看板台</a></li> -->
     </ul>
   </div>
   <div id="control_show_login" style="text-align: center; max-width: 550px; margin: 50px auto 0;padding: 10px 10px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;">
