--- a/personal.html
+++ b/personal.html
@@ -19,10 +19,13 @@
         🌻薅羊毛定制功能🌻
         <span class="collapse" style="text-align: right;white-space: nowrap; margin-right: 60px;  font-size: 20px;"> 
             <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/zoo/">时光轴</a> •
-            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/firenode.html">火力房</a> •
+            <!-- <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/firenode.html">火力房</a> • -->
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://lvlanxing.coding.me/pop/">火力房</a> •
             <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/barrage/">云弹幕</a> •
-            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/giftshow.html">礼物秀</a> •
-            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/motorcade.html">车队展</a>
+            <!-- <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/giftshow.html">礼物秀</a> • -->
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://lvlanxing.coding.me/pop/giftshow.html">礼物秀</a> •
+            <!-- <a class="nav-link" style="text-decoration:none;color: purple;" href="https://popzoo.github.io/pop/motorcade.html">车队展</a> -->
+            <a class="nav-link" style="text-decoration:none;color: purple;" href="https://lvlanxing.coding.me/pop/motorcade.html">车队展</a>
         </span>
     </div>
     <div style="position: absolute;left: 50%; top: 12%;line-height: 35px;  text-align: center;margin-left: -400px;max-width: 800px;">
