--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <script src="https://libs.baidu.com/jquery/1.3.2/jquery.min.js"></script>
 <script src='https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/jquery.eventFlow.js'></script>
 <script type="text/javascript" src="https://robot.ownthink.com/bot/js/robot.js"></script>
-<!-- <script src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/timeLine.js"></script> -->
-<script src="timeLine.js"></script>
+<script src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/js/timeLine.js"></script>
+<!-- <script src="timeLine.js"></script> -->
 </body>
 </html>
