--- a/personal.html
+++ b/personal.html
@@ -34,7 +34,7 @@
 <!--             <span>1.最近网站的节点数据总是受到莫名用户的攻击或恶意写乱改，在这里我先对我之前可能犯下罄竹难书的罪责和‘莫须有’擢发难数恶行表示深沉的忏悔与诚意的道歉。斑竹哪点做的不好，都改哈，毕竟人无完人，大家还多多包涵。</span><br/>
             <span>2.目前网站的共享节点是存在网盘上，数据是大家一起用的，没有做安全维护，隐藏功能也只是您上传下弹幕，用斗鱼昵称登陆即可，完全没有什么限制门槛。但就是这样还受到无端的恶意攻击或篡改，节点数据一亡再亡，网站页面一甭再甭。脚本都是免费提供给大家做交流、娱乐、学习用的，目前斑无偿维护，还要支付每月十好几块的网盘费用(还好有好心的<a href="https://popzoo.github.io/zoo/">大佬捐助</a>支持)，已经够殚精竭虑、耗费心神的了，真的没有余力在做安全维护了，所以希望大家都能多体谅下作者的苦楚与凄凉，如果真的到了‘破屋更遭连夜雨，漏船又遇打头风’的地步，斑竹也只能破罐子破摔，彻底关闭网站，还我一身逍遥！</span><br/>
             <span>3.对于大家的隐私保护方面斑竹可能做得不够好，还请见谅，如果不想共享自己的节点或拒绝斑竹的数据采集的，斑竹会在稍后我整理下把需要代码屏蔽或修改的地方都全部告诉大家，这样大家就可以匿名使用脚本了，还请大家放过节点数据，借用陈冠希帅仔的一句话“别搞我！”，最好诚恳请求大家放过！跪谢！</span><br/> -->
-            <span>大家如果有需要薅羊毛定制个性需求，可以进入QQ群（650178547）联系小编，小编尽最大努力满足各位老爷们的需求哈，随意打赏些小费，就是您对小编的最大支持了哈，您的捐助和支持奏是小编宵衣旰食肝脚本，焚膏继晷撸代码的源动力，查克拉，能量核！</span><br/>
+            <span>如果大家有某些网站脚本定制的需求，在某些网页上实现某些自动化的特殊功能等，可以进入QQ群（650178547）联系斑竹，小编和小伙伴们将尽最大努力满足各位老爷们的个性需求哈，随意打赏些小费，就是您对我们的最大支持了哈，您的捐助和支持奏是小编宵衣旰食肝脚本，焚膏继晷撸代码的源动力，查克拉，能量核！</span><br/>
             <span>白嫖谢幕告白,“独乐乐(白嫖)，与人乐乐(白嫖)，孰乐?”和大家一起薅羊毛才是真的乐！</span><br/>
         </div>
         <div style="text-align: center;margin-top: 20px;">
