--- a/manyOpen.html
+++ b/manyOpen.html
@@ -4,9 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>云弹幕教程</title>
-<link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/9d4121eed5cbb035e55203b8a9e56a73dcf2e6bf/images/favicon.ico"> 
+<link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico">
 <!-- https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico -->
-<meta content="时光轴,时间轴,技术路线,版本迭代,竖版时光轴" name="Keywords">
+<meta content="教程" name="Keywords">
 <link rel="stylesheet" href="css/time_line.css">
 </head>
 <body id="large-header" class="loading">
@@ -68,11 +68,8 @@
       <p style="font-size:14pt; line-height:150%; margin:0pt 0pt 0pt 18pt;">
         <span style="font-family:等线; font-size:14pt; font-weight:bold">
         抬眼望，羊被薅叫，抢丸激烈！除了斗鱼的小黑屋，天下之大，薅羊毛大军，大可以去得！顺便打个广告，薅点韭菜，希望各位老爷财主们，打赏下撒(1毛也是爱呀)，教程不易，撸码更难，如有不佳，还望海涵！</span></p>
-<!--       <table style=" margin:0 auto 0;"><tr> 
-        <td><img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/WeChatPay.png" width="60%"></td>
-      </tr></table>   -->      
       <p style="font-size:14pt; line-height:150%; text-align: center;margin:20px 0;">
-        <img style="width: 300px;" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/WeChatPay.png"/>
+        <img style="width: 250px;border-radius: 125px" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/777.gif"/>
       </p>
       <br/>
     </div>
