--- a/personal.html
+++ b/personal.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta content="定制,薅羊毛" name="Keywords">
-  <link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/9d4121eed5cbb035e55203b8a9e56a73dcf2e6bf/images/favicon.ico"> 
+  <link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico"> 
   <style type="text/css">
       *{margin:0;padding:0;list-style-type:none;}
       a,img{border:0;}
@@ -28,11 +28,11 @@
     <div style="position: absolute;left: 50%; top: 12%;line-height: 35px;  text-align: center;margin-left: -400px;max-width: 800px;">
         <h3 style="font-size: 25px;color:blue;">薅羊毛定制版本粉墨登场</h3>
         <div style="font-size: 20px;text-align: left; background-color: rgba(202,225,255,0.6);border-radius: 6px;padding:10px 10px;">
-            <span>如果大家有某些网站脚本定制的需求，在某些网页上实现某些自动化的特殊功能等，可以进入QQ群（650178547）联系斑竹，小编和小伙伴们将尽最大努力满足各位老爷们的个性需求哈，随意打赏些小费，就是您对我们的最大支持了哈，您的捐助和支持奏是小编宵衣旰食肝脚本，焚膏继晷撸代码的源动力，查克拉，能量核！</span><br/>
+            <span>如果大家有某些网站脚本定制的需求，在某些网页上实现某些自动化的特殊功能等，可以进入邮件(lvlanxing@gmail.com)联系斑竹，小编和小伙伴们将尽最大努力满足各位老爷们的个性需求哈，老爷们打赏些小费，就是您对我们的最大鼓舞，您的捐助和支持奏是小编宵衣旰食肝脚本，焚膏继晷撸代码的源动力，查克拉，能量核！</span><br/>
             <span>白嫖谢幕告白,“独乐乐(白嫖)，与人乐乐(白嫖)，孰乐?”和大家一起薅羊毛才是真的乐！</span><br/>
         </div>
         <div style="text-align: center;margin-top: 20px;">
-            <img style="width:250px;border-radius: 6px;opacity: 0.9" src="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/qqCrowd.png"/>
+            <img style="width:250px;border-radius: 125px;opacity: 0.9" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/777.gif"/>
         </div>     
     </div>
     <canvas id="sakura" style="z-index: -1;"></canvas>
