--- a/danmuManual.html
+++ b/danmuManual.html
@@ -4,8 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>云弹幕教程</title>
-<link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/9d4121eed5cbb035e55203b8a9e56a73dcf2e6bf/images/favicon.ico"> 
-<!-- https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico -->
+<link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico"> 
 <meta content="时光轴,时间轴,技术路线,版本迭代,竖版时光轴" name="Keywords">
 <link rel="stylesheet" href="css/time_line.css">
 </head>
@@ -39,11 +38,9 @@
       </ol>
       <p style="font-size:12pt; line-height:150%; margin:0pt 0pt 0pt 18pt; orphans:0; text-align:justify; widows:0">
         <span style="font-family:等线; font-size:12pt; font-weight:bold">普通模板链接：</span>
-        <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/jsonDanmu/commonTemplate.json" target="_blank">点击这里</a><br>
+        <a style="color:#0563c1" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/jsonDanmu/commonTemplate.json" target="_blank">点击这里</a><br>
         <span style="font-family:等线; font-size:12pt; font-weight:bold">极简模板链接：</span>
-        <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/jsonDanmu/easyTemplate.json" target="_blank">点击这里</a><br>
-        <span style="font-family:等线; font-size:12pt; font-weight:bold">公用弹幕链接：</span>  
-        <a style="color:#0563c1" href="https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/json/cloudDanmu.json" target="_blank">点击这里</a>
+        <a style="color:#0563c1" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/jsonDanmu/easyTemplate.json" target="_blank">点击这里</a><br>
       </p>
       <p style="font-size:12pt; line-height:150%; margin-left: 24px; orphans:0; text-align:justify; widows:0">
         <img src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/danmuManual_1.png"/></p>
