--- a/hiddenManual.html
+++ b/hiddenManual.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>隐藏功能教程</title>
-<link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/9d4121eed5cbb035e55203b8a9e56a73dcf2e6bf/images/favicon.ico"> 
+<link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico">
 <!-- https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico -->
 <meta content="时光轴,时间轴,技术路线,版本迭代,竖版时光轴" name="Keywords">
 <link rel="stylesheet" href="css/time_line.css">
@@ -33,7 +33,7 @@
     </div>  
   </div>
   <div id="qq_crowd_pic" style="text-align: center;margin-top: 20px;">
-      <img style="width:250px;border-radius: 6px;opacity: 0.9" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/qqCrowd.png"/>
+      <img style="width: 250px;border-radius: 125px" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/777.gif"/>
   </div>
   <div id="control_show_manual" style="text-align: left; max-width: 900px; margin: 0 auto 0;padding: 0 30px; background-color: rgba(235,235,235,0.7);border-radius: 10px;display:inherit;"></div>
   
