--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="lvlanxing" name="author">
 <title>时光轴</title>
-<link rel="shortcut icon" href="https://rawcdn.githack.com/popzoo/pop/9d4121eed5cbb035e55203b8a9e56a73dcf2e6bf/images/favicon.ico"> 
+<link rel="shortcut icon" href="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/favicon.ico">
 <!-- https://raw.githubusercontent.com/popzoo/pop/master/images/favicon.ico -->
 <meta content="时光轴,时间轴,技术路线,版本迭代,竖版时光轴" name="Keywords">
 <link rel="stylesheet" href="css/time_line.css">
