--- a/personal.html
+++ b/personal.html
@@ -28,7 +28,7 @@
     <div style="position: absolute;left: 50%; top: 12%;line-height: 35px;  text-align: center;margin-left: -400px;max-width: 800px;">
         <h3 style="font-size: 25px;color:blue;">薅羊毛定制版本粉墨登场</h3>
         <div style="font-size: 20px;text-align: left; background-color: rgba(202,225,255,0.6);border-radius: 6px;padding:10px 10px;">
-            <span>如果大家有某些网站脚本定制的需求，在某些网页上实现某些自动化的特殊功能等，可以进入邮件(lvlanxing@gmail.com)联系斑竹，小编和小伙伴们将尽最大努力满足各位老爷们的个性需求哈，老爷们打赏些小费，就是您对我们的最大鼓舞，您的捐助和支持奏是小编宵衣旰食肝脚本，焚膏继晷撸代码的源动力，查克拉，能量核！</span><br/>
+            <span>如果大家有某些网站脚本定制的需求，在某些网页上实现某些自动化的特殊功能等，可以<a href="mailto:lvlanxing@gmail.com?subject=邮件主题&body=邮件内容" rel="nofollow" style="color:red;text-decoration:none;font-weight:bold;">发送邮件</a>联系斑竹，小编和小伙伴们将尽最大努力满足各位老爷们的个性需求哈，老爷们打赏些小费，就是您对我们的最大鼓舞，您的捐助和支持奏是小编宵衣旰食肝脚本，焚膏继晷撸代码的源动力，查克拉，能量核！</span><br/>
             <span>白嫖谢幕告白,“独乐乐(白嫖)，与人乐乐(白嫖)，孰乐?”和大家一起薅羊毛才是真的乐！</span><br/>
         </div>
         <div style="text-align: center;margin-top: 20px;">
