--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         </ul>
     </div>
     <div class="w1000 tc body" >
-        <p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 20px;">时光轴的记忆</p>
+        <p style="font-size: 34px;font-weight: 600;color: blue;margin-top: 25px;">时光轴的记忆</p>
         <h3 class='header' style="font-size: 28px; background-color: rgba(53,53,53,0);">大人的慷慨赞助，小编的孜孜矻矻！</h3>
+        <p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
+        <p class='header' id="home_main_notice" style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">此处诚招广告商，代理商入驻，薅羊毛板块首页C位，为您展示自己的产品或服务无条件聚光清场，站长大人为您的广告极速加载保驾护航，如果网站挂了，也会以迅雷不及掩耳之势，通过预备方案极速切换其他线路，让您的广告屹立不倒，咬定不松！</p>
         <div id="qr_code_pic" style="text-align: center; display: none;">
             <img style="width: 250px;border-radius: 125px" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/tuantuan.gif"/>
             <span style="margin: 0 100px;"></span>
             <img style="width: 250px;border-radius: 125px" src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/daimei.gif"/>
-        </div>      
-        <p class='header' style="font-size: 22px;background-color: rgba(53,53,53,0);">点击屏幕右中的聊天图标与人工智能AI小思互动吧</p>
-        <p class='header' id="home_main_notice" style="font-size: 20px;line-height: 40px; padding:3px 20px;background-color: rgba(242,242,242,0.5);color:#EE5C42;display: table-cell;">此处诚招广告商，代理商入驻，薅羊毛板块首页C位，为您展示自己的产品或服务无条件聚光清场，站长大人为您的广告极速加载保驾护航，如果网站挂了，也会以迅雷不及掩耳之势，通过预备方案极速切换其他线路，让您的广告屹立不倒，咬定不松！</p>
+        </div>        
         <div class="event_wrap clearfix">
             <div class="middle_line"></div>
         </div>
@@ -48,7 +48,8 @@
 <script src="https://libs.baidu.com/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/spirit_bubble.js"></script>
 <script src='https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/jquery.eventFlow.js'></script>
-<script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/timeLine.js"></script>
+<!-- <script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/timeLine.js"></script> -->
+<script src="timeLine.js"></script>
 <script src="https://www.ownthink.com/bot/js/robot.js?appid=xiaosi"></script>
 </body>
 </html>
