--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <script src="https://libs.baidu.com/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/spirit_bubble.js"></script>
 <script src='https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/jquery.eventFlow.js'></script>
-<!-- <script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/timeLine.js"></script> -->
-<script src="timeLine.js"></script>
+<script src="https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/js/timeLine.js"></script>
+<!-- <script src="timeLine.js"></script> -->
 <script src="https://www.ownthink.com/bot/js/robot.js?appid=xiaosi"></script>
 </body>
 </html>
